# compas_plotters

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  MANIFEST.in  README.md  conftest.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  tasks.py  versions.json
.github/workflows/: build.yml  docs.yml  pr-checks.yml  release.yml
1.0.0/: 404.html  index.html  objects.inv  sitemap.xml
1.0.0-rc0/: 404.html  index.html  sitemap.xml
1.0.0-rc0/api/: index.html
1.0.0-rc0/api/compas_plotter/: index.html
1.0.0-rc0/api/compas_plotter.scene/: index.html
1.0.0-rc0/changelog/: index.html
1.0.0-rc0/installation/: index.html
1.0.0-rc0/license/: index.html
1.0.0-rc0/print_page/: index.html
1.0.0-rc0/search/: search_index.json
1.0.0-rc0/tutorial/: index.html
1.0.0/api/: index.html
1.0.0/api/compas_plotter/: index.html
1.0.0/api/compas_plotter.scene/: index.html
1.0.0/changelog/: index.html
1.0.0/installation/: index.html
1.0.0/license/: index.html
1.0.0/print_page/: index.html
1.0.0/search/: search_index.json
1.0.0/tutorial/: index.html
docs/: index.md  installation.md  tutorial.md
docs/api/: compas_plotter.md  compas_plotter.scene.md  compas_plotters.md  compas_plotters.scene.md  index.md
src/compas_plotter/: __init__.py  __version__.py  plotter.py
src/compas_plotter/scene/: __init__.py  circleobject.py  plotterobject.py  plotterscene.py  pointobject.py
src/compas_plotters/: __init__.py  __version__.py  plotter.py
src/compas_plotters/scene/: __init__.py  boxobject.py  circleobject.py  ellipseobject.py  frameobject.py  graphobject.py  lineobject.py  meshobject.py  plotterobject.py  plotterscene.py  pointobject.py  polygonobject.py  polylineobject.py  shapeobject.py  vectorobject.py
tests/: test_plotter.py
